Added story container, stylesheet fixes and animation updates
Updated the title, animation frequency and added the story container

--- a/02-Global-Viticultural-Climate-Zones/index.html
+++ b/02-Global-Viticultural-Climate-Zones/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Display a web map using an alternate projection</title>
+    <title>Viticultural Climate Zones</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
@@ -352,7 +352,7 @@
                     // update the map filter
 
                     if (animation === 'animation_on') {
-                        timer = setInterval(updateMap, 300);
+                        timer = setInterval(updateMap, 400);
                         window.setInterval(timer);
                     } else if (animation === 'animation_off') {
                         window.clearInterval(timer);
