--- a/05-UK-Vinyard-Graphs/echart_grapes.html
+++ b/05-UK-Vinyard-Graphs/echart_grapes.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
-    <div id="main" style="width: 800px;height:500px;"></div>
+    <div id="main" style="width: 95vw;height:75vh; padding: 0;"></div>
     <script type="text/javascript">
       // 基于准备好的dom，初始化echarts实例
     var myChart = echarts.init(document.getElementById('main'));
@@ -34,6 +34,7 @@
       }
     },
     grid: {
+      top: '25%',
       left: '3%',
       right: '4%',
       bottom: '3%',
