--- a/05-UK-Vinyard-Graphs/Dropdown_4.html
+++ b/05-UK-Vinyard-Graphs/Dropdown_4.html
@@ -56,22 +56,22 @@
       switch (selectedChart) {
         case "echart1":
           console.log("Let's work onecharttable.");
-          document.getElementById("myContent").innerHTML = '<iframe class="chartContent"  src="echart_grapes.html" ></iframe>';
+          document.getElementById("myContent").innerHTML = '<iframe class="chartContent" frameBorder="0" src="echart_grapes.html" ></iframe>';
           break;
 
         case "flourish1":
           console.log("a");
-          document.getElementById("myContent").innerHTML = '<iframe class="chartContent" src="flourish_export.html" ></iframe>';
+          document.getElementById("myContent").innerHTML = '<iframe class="chartContent" frameBorder="0" src="flourish_export.html" ></iframe>';
           break;
 
         case "flourish2":
           console.log("b");
-          document.getElementById("myContent").innerHTML = '<iframe class="chartContent" src="flourish_red_white.html" ></iframe>';
+          document.getElementById("myContent").innerHTML = '<iframe class="chartContent" frameBorder="0" src="flourish_red_white.html" ></iframe>';
           break;
 
         case "echart2":
           console.log("Let's work echarttable2.");
-          document.getElementById("myContent").innerHTML = '<iframe class="chartContent"  src="echart_Wineries_HA.html" ></iframe>';
+          document.getElementById("myContent").innerHTML = '<iframe class="chartContent" frameBorder="0"  src="echart_Wineries_HA.html" ></iframe>';
           break;
         default:
       }
