--- a/05-UK-Vinyard-Graphs/echart_Wineries_HA.html
+++ b/05-UK-Vinyard-Graphs/echart_Wineries_HA.html
@@ -7,9 +7,9 @@
     <script src="echarts.js"></script>
   </head>
   <body>
-    <h1>Growth of Vineyards, 2000-2020</h1>
+    <h1>Vineyards hA</h1>
     <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
-    <div id="main" style="width: 95vw;height:75vh; padding: 0;"></div>
+    <div id="main" style="width: 800px;height:500px;"></div>
     <script type="text/javascript">
       // 基于准备好的dom，初始化echarts实例
       var myChart = echarts.init(document.getElementById('main'));
