--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -461,7 +461,7 @@
           </div>
           <div class="section-text">
             <h2>Conclusion</h2>
-            <h3>Subheading</h3>
+            <h3>Final remarks</h3>
             <p class="paragraph-main">
               Throughout this narrative, we have explored the UK’s burgeoning
               Viticulture. From what is being produced, to how and why it is
@@ -480,6 +480,13 @@
           <div class="section-text">
             <h2>14) About</h2>
             <h3>Team</h3>
+              <p class="paragraph-main">
+                Andras Gelayi<br/>
+                Ruby Johnson<br/>
+                Kamelya Staneva<br/>
+                Haofu Wang<br/>
+                Shuyi Zheng<br/>
+            </p>
           </div>
         </div>
       </section>
