--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -393,25 +393,21 @@
               Vineyards specialise in a type of grape, with over 30 varieties
               grown across the UK. Each variety requires specific levels of soil
               moisture, PH and bedrock, which can greatly alter the harvest and
-              resulting taste of the wine. The ideal range for PH sits between
+              taste of the wine. The range for PH sits between
               5.5 and 6.8, creating equilibrium for nutrients. If the soil is
               too acidic or alkaline, yields will decrease and create unhealthy
               vines. The ideal range for soil moisture lies below 50%, as soil
               must be fertile and drain well. The bedrock beneath provides
-              minerals and physical support for vineyards. Without suitable
-              geology, a vineyard is destined to fail. But how do these
-              requirements translate to a singular vineyard? The Rathfinny Wine
+              minerals and physical support for vineyards. But how do these
+              requirements translate to a vineyard? The Rathfinny Wine
               Estate lies within Sussex. Established in 2010, with vines planted
               in 2012, the vineyard specialises in producing Pinot Noir,
               Chardonnay and Pinot Meunie, spanning 350 acres. Through
-              extracting satellite data, the presented histograms display that
-              the surrounding land provides suitable soil moisture and PH for
+              extracting satellite data, it became evident that the surrounding land provides suitable soil moisture and PH for
               these varieties. The south-facing slopes also lie on the same
-              chalk as the Paris Basin within Northern France. Chalk provides a
+              chalk as the Paris Basin. Chalk provides a
               soft, yet cooling and porous alkaline bedrock, ideal for grapes
-              for high acidity (corroborating the relatively acidic measures of
-              PH in the soil). The vine's roots can penetrate the bedrock,
-              providing both draining and moisture for nourishment.
+              for high acidity.
             </p>
           </div>
         </div>
