--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -121,14 +121,14 @@
               patterns, the UK is quickly becoming a novel producer of wines.
               From Pinot Noir to a new class of English sparkling wine,
               vineyards throughout the UK are shifting the long-considered
-              status quo for Viticulture. [2]. Throughout this website, the
+              status quo for Viticulture. Throughout this website, the
               untold story of the UK’s viticulture is explored. From weather
               patterns, to what lies beneath the grapes, you can discover how a
               global phenomenon is creating a new kind of locality.
             </p>
             <p class="paragraph-main">
               Historically, wine regions were located almost always between the
-              latitudes of 30° and 50° [1]. As a rule of thumb, along with many
+              latitudes of 30° and 50°. As a rule of thumb, along with many
               further characteristics of the climate and terroir, grapes prefer
               an average temperature between 12°C and 22°C throughout its
               growing season. As visualised in the next page, climates are
@@ -254,7 +254,7 @@
             class="map"
             src="maps/Slide_6_Vineyard_Locations.html"
           ></iframe>
-          <p class="paragraph-describtion">UK vineyards plots (Shuyi)</p>
+          <p class="paragraph-describtion">UK Vineyard Locations. Data: <a href= "https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a></p>
         </div>
         <!-- <div class="section-text">
             <h2>Location of vineyards (Ruby)</h2>
@@ -314,12 +314,14 @@
               src="maps/Slide_7_Climate_Plots/Rain/index.html"
             ></iframe>
             <p class="paragraph-describtion">
-              Describtion+Source of graphic/visualisation
+              Data From: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+              ">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+              </a>
             </p>
           </div>
           <div class="section-text">
             <h2>Precipitation</h2>
-            <h3>Subheading</h3>
+            <h3> </h3>
             <p class="paragraph-main">
               Line graph showing mean annual precipitation levels for South-East
               England and UK. Data from the Met Office.
@@ -338,12 +340,14 @@
               src="maps/Slide_7_Climate_Plots/Sun/index.html"
             ></iframe>
             <p class="paragraph-describtion">
-              Describtion+Source of graphic/visualisation
+                Data From: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+                ">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+                </a>
             </p>
           </div>
           <div class="section-text">
             <h2>Sun</h2>
-            <h3>Subheading</h3>
+            <h3> </h3>
             <p class="paragraph-main">
               Line graph showing the annual mean sunshine levels for South-East
               England and UK. Data from the Met Office.
@@ -362,12 +366,13 @@
               src="maps/Slide_7_Climate_Plots/Temp/index.html"
             ></iframe>
             <p class="paragraph-describtion">
-              Describtion+Source of graphic/visualisation
+                Data From: <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+                </a>
             </p>
           </div>
           <div class="section-text">
-            <h2>Temp</h2>
-            <h3>Subheading</h3>
+            <h2>Temperature</h2>
+            <h3> </h3>
             <p class="paragraph-main">
               Line graph showing the annual mean temperature levels for
               South-East England and UK. Data from the Met Office.
@@ -383,27 +388,26 @@
           <div class="section-graphics">
             <iframe class="map" src="maps/Slide_8_Case_Study.html"></iframe>
             <p class="paragraph-describtion">
-              Describtion+Source of graphic/visualisation
+              Case Study Map. 
             </p>
           </div>
           <div class="section-text">
             <h2>Rathfinny Wine Estate, Sussex</h2>
             <!-- <h3>Regional Case Study: Beneath the Vine</h3> -->
             <p class="paragraph-main">
-              Vineyards specialise in a type of grape, with over 30 varieties
-              grown across the UK. Each variety requires specific levels of soil
-              moisture, PH and bedrock, which can greatly alter the harvest and
-              taste of the wine. The range for PH sits between
+              Vineyards grow over 30 varieties
+              across the UK. Each variety requires specific levels of soil
+              moisture, PH and bedrock, which can greatly alter harvest and
+              taste of wine. The range for PH sits between
               5.5 and 6.8, creating equilibrium for nutrients. If the soil is
               too acidic or alkaline, yields will decrease and create unhealthy
               vines. The ideal range for soil moisture lies below 50%, as soil
               must be fertile and drain well. The bedrock beneath provides
               minerals and physical support for vineyards. But how do these
               requirements translate to a vineyard? The Rathfinny Wine
-              Estate lies within Sussex. Established in 2010, with vines planted
-              in 2012, the vineyard specialises in producing Pinot Noir,
+              Estate was established in 2010, the vineyard specialises in producing Pinot Noir,
               Chardonnay and Pinot Meunie, spanning 350 acres. Through
-              extracting satellite data, it became evident that the surrounding land provides suitable soil moisture and PH for
+              extracting satellite data, it is evident that the surrounding land provides suitable soil moisture and PH for
               these varieties. The south-facing slopes also lie on the same
               chalk as the Paris Basin. Chalk provides a
               soft, yet cooling and porous alkaline bedrock, ideal for grapes
@@ -420,7 +424,7 @@
           <div class="section-graphics">
             <iframe class="map" src="maps/Slide_9_Napa_Valley.html"></iframe>
             <p class="paragraph-describtion">
-              Describtion+Source of graphic/visualisation
+              Map showing Napa Valley fire on 10/10/2017. 
             </p>
           </div>
           <div class="section-text">
@@ -452,7 +456,7 @@
           <div class="section-graphics">
             <iframe class="map" src=""></iframe>
             <p class="paragraph-describtion">
-              Describtion+Source of graphic/visualisation
+              
             </p>
           </div>
           <div class="section-text">
@@ -463,9 +467,9 @@
               Viticulture. From what is being produced, to how and why it is
               clear that the change in climate has driven this opportunity.
               However, with the point of no return, in which the potential to
-              un-do climate change will become impassable, we should question
+              un-do climate change will become impassable, we should begin to question
               whether the chance to enjoy a locally sourced wine is truly a
-              permanent choice we would like.
+              permanent choice we want.
             </p>
           </div>
         </div>
@@ -474,7 +478,7 @@
       <section class="vertical-scrolling">
         <div class="section-container">
           <div class="section-text">
-            <h2>14) About</h2>
+            <h2>About</h2>
             <h3>Team</h3>
               <p class="paragraph-main">
                 Andras Gelayi<br/>
@@ -492,10 +496,30 @@
 
       <section class="vertical-scrolling">
         <div class="section-container">
-          <div class="section-text">
+          <div class="fullpage-section-text">
             <h2>Data Sources</h2>
             <h3>This a group project by CASA Group 5 for CASA0003</h3>
-            <p class="end">Pls give us a distinction</p>
+            <p class="paragraph-main">
+                <a href= "http://www.englishwine.com/">http://www.englishwine.com/</a>
+                <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+                ">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
+                </a>
+                <a href= "https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a>
+                <a href= "https://www.statista.com/topics/8241/wine-in-the-united-kingdom/)
+                ">https://www.statista.com/topics/8241/wine-in-the-united-kingdom/</a>
+                <a href= "https://www.food.gov.uk/business-guidance/wine)">https://www.food.gov.uk/business-guidance/wine</a>
+                <a href= "https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download">https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download</a>
+                <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">University of Delaware Air Temperature and Precipitation: NOAA Physical Sciences Laboratory</a>
+                <a href= "https://winegourd.blogspot.com/2018/03/ ">David Morrison, ‘The Wine Gourd: March 2018’. https://winegourd.blogspot.com/2018/03/ (accessed May 11, 2022)</a>
+                <a href= "https://rathfinnyestate.com/">https://rathfinnyestate.com/</a>
+                <a href= "https://www.bgs.ac.uk/ ">https://www.bgs.ac.uk/ </a>
+                <a href= "https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_PH-H2O_USDA-4C1A2A_M_v02">https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_PH-H2O_USDA-4C1A2A_M_v02
+                </a>
+                <a href= "https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_WATERCONTENT-33KPA_USDA-4B1C_M_v01">https://developers.google.com/earthengine/datasets/catalog/OpenLandMap_SOL_SOL_WATERCONTENT-33KPA_USDA-4B1C_M_v01</a>
+                <a href= "https://geodata.lib.utexas.edu/catalog/ark28722-s74012 ">https://geodata.lib.utexas.edu/catalog/ark28722-s74012</a>
+                <a href= "https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/">https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/
+                </a>       
+            </p>
           </div>
         </div>
       </section>
