Adding line breaks on the references page

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -500,25 +500,20 @@
             <h2>Data Sources</h2>
             <h3>This a group project by CASA Group 5 for CASA0003</h3>
             <p class="paragraph-main">
-                <a href= "http://www.englishwine.com/">http://www.englishwine.com/</a>
-                <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
-                ">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series
-                </a>
-                <a href= "https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a>
-                <a href= "https://www.statista.com/topics/8241/wine-in-the-united-kingdom/)
-                ">https://www.statista.com/topics/8241/wine-in-the-united-kingdom/</a>
-                <a href= "https://www.food.gov.uk/business-guidance/wine)">https://www.food.gov.uk/business-guidance/wine</a>
-                <a href= "https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download">https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download</a>
-                <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">University of Delaware Air Temperature and Precipitation: NOAA Physical Sciences Laboratory</a>
-                <a href= "https://winegourd.blogspot.com/2018/03/ ">David Morrison, ‘The Wine Gourd: March 2018’. https://winegourd.blogspot.com/2018/03/ (accessed May 11, 2022)</a>
-                <a href= "https://rathfinnyestate.com/">https://rathfinnyestate.com/</a>
-                <a href= "https://www.bgs.ac.uk/ ">https://www.bgs.ac.uk/ </a>
-                <a href= "https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_PH-H2O_USDA-4C1A2A_M_v02">https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_PH-H2O_USDA-4C1A2A_M_v02
-                </a>
-                <a href= "https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_WATERCONTENT-33KPA_USDA-4B1C_M_v01">https://developers.google.com/earthengine/datasets/catalog/OpenLandMap_SOL_SOL_WATERCONTENT-33KPA_USDA-4B1C_M_v01</a>
-                <a href= "https://geodata.lib.utexas.edu/catalog/ark28722-s74012 ">https://geodata.lib.utexas.edu/catalog/ark28722-s74012</a>
-                <a href= "https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/">https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/
-                </a>       
+                <a href= "http://www.englishwine.com/">http://www.englishwine.com/</a><br/>
+                <a href= "https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series</a><br/>
+                <a href= "https://www.winegb.co.uk/trade/industry-data-and-stats-2/)">https://www.winegb.co.uk/trade/industry-data-and-stats-2/</a><br/>
+                <a href= "https://www.statista.com/topics/8241/wine-in-the-united-kingdom/)">https://www.statista.com/topics/8241/wine-in-the-united-kingdom/</a><br/>
+                <a href= "https://www.food.gov.uk/business-guidance/wine)">https://www.food.gov.uk/business-guidance/wine</a><br/>
+                <a href= "https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download">https://land.copernicus.eu/pan-european/corine-land-cover/clc-2000?tab=download</a><br/>
+                <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">University of Delaware Air Temperature and Precipitation: NOAA Physical Sciences Laboratory</a><br/>
+                <a href= "https://winegourd.blogspot.com/2018/03/ ">David Morrison, ‘The Wine Gourd: March 2018’. https://winegourd.blogspot.com/2018/03/ (accessed May 11, 2022)</a><br/>
+                <a href= "https://rathfinnyestate.com/">https://rathfinnyestate.com/</a><br/>
+                <a href= "https://www.bgs.ac.uk/ ">https://www.bgs.ac.uk/</a><br/>
+                <a href= "https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_PH-H2O_USDA-4C1A2A_M_v02">https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_PH-H2O_USDA-4C1A2A_M_v02</a><br/>
+                <a href= "https://developers.google.com/earth-engine/datasets/catalog/OpenLandMap_SOL_SOL_WATERCONTENT-33KPA_USDA-4B1C_M_v01">https://developers.google.com/earthengine/datasets/catalog/OpenLandMap_SOL_SOL_WATERCONTENT-33KPA_USDA-4B1C_M_v01</a><br/>
+                <a href= "https://geodata.lib.utexas.edu/catalog/ark28722-s74012 ">https://geodata.lib.utexas.edu/catalog/ark28722-s74012</a><br/>
+                <a href= "https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/">https://www.planet.com/pulse/northern-california-wildfire-satellite-data-available-for-access/</a><br/>   
             </p>
           </div>
         </div>
