Fixing wording and typos

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -200,7 +200,7 @@
           <div class="section-graphics">
             <iframe class="map" src="maps/EUvineyards.html"></iframe>
             <p class="paragraph-describtion">
-              Map of Vineyards landuse in Europe (Data source, 2000)
+              Map of Vineyards landuse in Europe (Copernicus Global Land Service, 2000)
             </p>
           </div>
           <div class="section-text">
@@ -278,7 +278,7 @@
               class="map"
               src="maps/Slide_7_Counties_and_Climate.html"
             ></iframe>
-            <p class="paragraph-describtion">Location of vineyards (Ruby)</p>
+            <p class="paragraph-describtion">Location of vineyards</p>
           </div>
           <div class="section-text">
             <h2>The Regions of UK Viticulture</h2>
