Changing the opacity the EU map

--- a/website-frontend/maps/EUvineyards.html
+++ b/website-frontend/maps/EUvineyards.html
@@ -32,7 +32,9 @@
         height: 8%; 
         width: 28%;
         background-color: white;
-        padding: 10px 20px  }
+        padding: 10px 20px;
+        opacity: 0.8;  
+    }
 
 
 
@@ -43,7 +45,7 @@
 <body>
 <div id="map"></div>
 <div id="console">
-    <h1>Vineyards Locations in Europe</h1>
+    <h1>Vineyards in Europe</h1>
     </div>
     
 
