--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -173,7 +173,7 @@
               src="https://agelanyi.github.io/climate-and-uk-wine/03-UK-Climate-Change/03-UK-climate-temp-rainfall.html"
             ></iframe>
 
-            <p class="paragraph-describtion">Local Viticulture Climate Zones</p>
+            <p class="paragraph-describtion">Data source: <a href="https://www.metoffice.gov.uk/research/climate/maps-and-data/uk-and-regional-series">UK MET Office (2022)</a></p>
           </div>
 
           <div class="section-text">
@@ -278,7 +278,7 @@
               class="map"
               src="maps/Slide_7_Counties_and_Climate.html"
             ></iframe>
-            <p class="paragraph-describtion">Location of vineyards</p>
+            <p class="paragraph-describtion">Data from: <a href="https://www.winegb.co.uk/">WineGB UK (2022)</a></p>
           </div>
           <div class="section-text">
             <h2>The Regions of UK Viticulture</h2>
@@ -388,7 +388,7 @@
           <div class="section-graphics">
             <iframe class="map" src="maps/Slide_8_Case_Study.html"></iframe>
             <p class="paragraph-describtion">
-              Case Study Map. 
+              Case Study Map. Data from: British Geological Survey
             </p>
           </div>
           <div class="section-text">
@@ -424,7 +424,7 @@
           <div class="section-graphics">
             <iframe class="map" src="maps/Slide_9_Napa_Valley.html"></iframe>
             <p class="paragraph-describtion">
-              Map showing Napa Valley fire on 10/10/2017. 
+              Map showing Napa Valley fire on 10/10/2017. Source: The University of Texas (2017)
             </p>
           </div>
           <div class="section-text">
